manifests/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: static-web-server
  type: ClusterIP
